Fixed navPost align

--- a/style.scss
+++ b/style.scss
@@ -386,9 +386,11 @@ nav {
 
 .nav-posts-left {
   float: left;
+  text-align: left;
 }
 .nav-posts-right {
   float: right;
+  text-align: right;
 }
 
 footer {
